<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.0.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>br.com.helberbelmiro</groupId>
	<artifactId>get-rid-of-npe-with-checker-framework</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>get-rid-of-npe-with-checker-framework</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<java.version>11</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Other dependencies -->

		<dependency>
			<groupId>org.checkerframework</groupId>
			<artifactId>checker-qual</artifactId>
			<version>3.3.0</version>
		</dependency>

		<!-- Other dependencies -->
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<fork>true</fork>
					<release>11</release>
					<compilerArguments>
						<Xmaxerrs>10000</Xmaxerrs>
						<Xmaxwarns>10000</Xmaxwarns>
					</compilerArguments>
					<!-- Without showWarnings and verbose, maven-compiler-plugin may not show output. -->
					<showWarnings>true</showWarnings>
					<verbose>true</verbose>
					<annotationProcessorPaths>
						<path>
							<groupId>org.checkerframework</groupId>
							<artifactId>checker</artifactId>
							<version>3.3.0</version>
						</path>
					</annotationProcessorPaths>
					<annotationProcessors>
						<!-- Add all the checkers you want to enable here -->
						<annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
					</annotationProcessors>
					<compilerArgs>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>

						<!-- Optionally, -Awarns turns type-checking errors into warnings. -->
						<!-- <arg>-Awarns</arg> -->
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
